VERSION "4.3.107"
updated the date
a few corrections to comments
modified the barCount function to not number bar 1 when the piece starts with double barlines

VERSION "4.3.106"
changed the -pdf option to exec the gs command with options, including one to specify 
letter paper size
Also, change sprintf to snprintf to keep apple compiler happy

VERSION "4.3.105
A correction for < used as a dash ornament submitted by Paul Overell
a fix to allow changing the number of staff lines on one page submitted by Paul Overell
added perl program ps2pdf.pl

later - the -tabfontpath is added

VERSION "4.3.104"
change file name length to be greater than 120 chars

VERSION "4.3.103"
make gray barline that don't count in bar numbering

VERSION "4.3.102"
fixes to make measure numbers print when used with double bar lines

VERSION "4.3.101"
fixed score on 7 and 8 course when a b or c is used rather than a

VERSION "4.3.100"
fixed spacing in titles with reduced fonts

VERSION "4.3.99"
a fix to grids with dotted notes, or extra flags for just some notes

VERSION "4.3.98"
added pragma once to all .h files, removed trailing whitespace for .cc files
other changes for development tools

VERSION "4.3.97"
a lot of changes to the fonts and the formatting of baroque lute fonts

VERSION "4.3.96"
added short squat baroque f for Probert
fixed flags where thin or other flag is specified for baroque, might need more work
also worked on underbars and multiple f characters and brisee sign

VERSION "4.3.95"
for Jan - improved bar numbers, including changing them and letting the user
select a number font to use.
use of dot . as a barline that is counted by bar numbering (unless the dot 
is followed by an X)
also added way to set first measure number

added r for *L* character for repeat and made it and the other repeat character 
a bit smaller

VERSION "4.3.94"
fix top margins - add win.h to include stuff to quiet Visual Studio compiler

VERSION "4.3.93"